implement custom route to support yaml output
