# server/openapi/model_definition_file.go
@@ -1,31 +1,0 @@
-/*
- * TraceTest
- *
- * OpenAPI definition for TraceTest endpoint and resources
- *
- * API version: 0.2.1
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openapi
-
-type DefinitionFile struct {
-	Content string `json:"content,omitempty"`
-}
-
-// AssertDefinitionFileRequired checks if the required fields are not zero-ed
-func AssertDefinitionFileRequired(obj DefinitionFile) error {
-	return nil
-}
-
-// AssertRecurseDefinitionFileRequired recursively checks if required fields are not zero-ed in a nested slice.
-// Accepts only nested slice of DefinitionFile (e.g. [][]DefinitionFile), otherwise ErrTypeAssertionError is thrown.
-func AssertRecurseDefinitionFileRequired(objSlice interface{}) error {
-	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
-		aDefinitionFile, ok := obj.(DefinitionFile)
-		if !ok {
-			return ErrTypeAssertionError
-		}
-		return AssertDefinitionFileRequired(aDefinitionFile)
-	})
-}
